# spherro

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
benches/: solver.rs
src/: bin.rs  blob.rs  fetcher.rs  force.rs  initializer.rs  kernel.rs  lib.rs  octree.rs  particle.rs  playground.rs  quadtree.rs  universe.rs  util.rs  utils.rs  vector3.rs
src/accelerators/: grid.rs  mod.rs  quadtree.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.common.js  webpack.config.js
www/shaders/: fs_blob.glsl  fs_retro.glsl  vs.glsl
www/src/: fpscounter.js  index.js  renderer.js
www/src/shaders/: particle_fs.glsl  particle_vs.glsl
www/static/: index.html  main.css
